Fix alignment of poster title - thanks Jorin and Ruth for reporting

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -2178,7 +2178,7 @@ div.core_posts {
 .poster .title {
 	white-space: normal;
 	word-wrap: break-word;
-	max-width: 14em;
+	max-width: 100%;
 }
 .poster .linklevel2, .poster .linklevel2:focus,
 .poster .listlevel2:hover .linklevel2 {
